# HMS

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.prod  IMPROVEMENTS.md  LICENSE  PRD.md  README.md  alembic.ini  docker-compose.yml  generate_sample_data.sql  hms.session.sql  import_host_db.sh  init-db.sh  init-db.sql  main.py  pyproject.toml  reproduce_cors_issue.py  reproduce_jwt_issue.py  requirements.txt
.github/workflows/: ci.yml
backend/alembic/migrations/: env.py  seed_data.py
backend/app/: main.py
backend/app/api/: audit_logs.py  auth.py  bookings.py  guests.py  housekeeping.py  invoices.py  payments.py  pricing_rules.py  reports.py  room_types.py  rooms.py  users.py
backend/app/core/: config.py  permissions.py  security.py
backend/app/db/: models.py  session.py
backend/app/dependencies/: security.py
backend/app/schemas/: audit_log.py  (+11 more)
backend/tests/: conftest.py  test_availability.py  test_guests.py  test_room_types.py
frontend/: admin.css  admin.html  index.html  styles.css
frontend/js/: admin.js  api.js  app.js  auth.js  housekeeping.js  reports.js  theme.js  ui.js  utils.js
tests/: conftest.py  test_api_smoke.py  test_audit_logs.py  test_auth_users.py  test_availability.py  test_bookings.py  test_cancellation_refund.py  test_guests.py  test_housekeeping.py  test_housekeeping_automation.py  test_housekeeping_reports.py  test_integration.py  test_invoice_service.py  test_invoices.py  test_no_show_penalties.py  test_payment_service.py  test_payments_integration.py  test_pricing_rules.py  test_reports.py  test_room_types.py  test_rooms.py
(+24 files in other folders)
