[project]
name = "hms1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.123.5",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==3.2.2",
    "email-validator>=2.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "pytest>=9.0.1",
    "httpx>=0.28.1",
    "black>=25.11.0",
    "asyncpg>=0.31.0",
    "reportlab==4.0.9",
]
